--- a/src/main/webapp/ola.xhtml
+++ b/src/main/webapp/ola.xhtml
@@ -12,6 +12,7 @@ Nome: <h:inputText value="#{ola.nome}" />
 Sobrenome: <h:inputText value="#{ola.sobrenome}" />
 		<br />
 		<h:commandButton value="Dizer olá" action="#{ola.dizerOla}" />
+		asdfa
 	</h:form>
 </h:body>
 </html>
