--- a/src/main/webapp/ola.xhtml
+++ b/src/main/webapp/ola.xhtml
@@ -11,7 +11,7 @@ Nome: <h:inputText value="#{ola.nome}" />
 		<br />
 Sobrenome: <h:inputText value="#{ola.sobrenome}" />
 		<br />
-		<h:commandButton value="Dizer olá" action="#{ola.dizerOla}" />
+		<h:commandButton value="Dizer olá web " action="#{ola.dizerOla}" />
 		Olá local
 	</h:form>
 </h:body>
