--- a/src/main/webapp/ola.xhtml
+++ b/src/main/webapp/ola.xhtml
@@ -11,8 +11,8 @@ Nome: <h:inputText value="#{ola.nome}" />
 		<br />
 Sobrenome: <h:inputText value="#{ola.sobrenome}" />
 		<br />
-		<h:commandButton value="Dizer olá" action="#{ola.dizerOla}" />
-		Olá local 3
+		<h:commandButton value="Dizer olá web " action="#{ola.dizerOla}" />
+		Olá local web 
 	</h:form>
 </h:body>
 </html>
