--- a/src/main/webapp/ola.xhtml
+++ b/src/main/webapp/ola.xhtml
@@ -10,9 +10,8 @@
 Nome: <h:inputText value="#{ola.nome}" />
 		<br />
 Sobrenome: <h:inputText value="#{ola.sobrenome}" />
-		<br />
-		<h:commandButton value="Dizer olá web " action="#{ola.dizerOla}" />
-		Olá web 
+		<br />		
+		Olá local 
 	</h:form>
 </h:body>
 </html>
