--- a/src/main/webapp/ola.xhtml
+++ b/src/main/webapp/ola.xhtml
@@ -12,6 +12,6 @@ Nome: <h:inputText value="#{ola.nome}" />
 Sobrenome: <h:inputText value="#{ola.sobrenome}" />
 		<br />		
 
-ola web 
+ola web 5
 </h:body>
 </html>
