--- a/src/main/webapp/ola.xhtml
+++ b/src/main/webapp/ola.xhtml
@@ -11,7 +11,6 @@ Nome: <h:inputText value="#{ola.nome}" />
 		<br />
 Sobrenome: <h:inputText value="#{ola.sobrenome}" />
 		<br />		
-
-ola web 
+ola local 4  
 </h:body>
 </html>
