--- a/src/main/webapp/ola.xhtml
+++ b/src/main/webapp/ola.xhtml
@@ -6,11 +6,11 @@
 </h:head>
 <h:body>
 	<h:form>
-		<h1>Olá #{ola.nomeCompleto}</h1>
+		<h1>Olá 2 #{ola.nomeCompleto}</h1>
 Nome: <h:inputText value="#{ola.nome}" />
 		<br />
 Sobrenome: <h:inputText value="#{ola.sobrenome}" />
 		<br />		
-ola local 6
+ola local 7
 </h:body>
 </html>
