--- a/src/main/webapp/ola.xhtml
+++ b/src/main/webapp/ola.xhtml
@@ -12,7 +12,7 @@ Nome: <h:inputText value="#{ola.nome}" />
 Sobrenome: <h:inputText value="#{ola.sobrenome}" />
 		<br />		
 
-ola web 7
+ola local 8
 
 </h:body>
 </html>
