--- a/src/main/webapp/ola.xhtml
+++ b/src/main/webapp/ola.xhtml
@@ -11,7 +11,7 @@ Nome: <h:inputText value="#{ola.nome}" />
 		<br />
 Sobrenome: <h:inputText value="#{ola.sobrenome}" />
 		<br />		
-
+Nova linha
 ola local 8
 
 </h:body>
